-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
b42
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083257 | emb-9 | Nils Eliasson | P3 | Resolved | Fixed | team |
com/sun/management/DiagnosticCommandMBean/DcmdMBeanPermissionsTest.java (timed out?)
----------messages:(6/391)*----------
JDK under test: (C:\\local\\aurora\\sandbox\\sca\\vmsqe\\jdk\\nightly\\fastdebug\\rt_baseline\\windows-amd64)
java version "1.9.0-internal-fastdebug"
Java(TM) SE Runtime Environment (build 1.9.0-internal-fastdebug-201410100006.sspitsyn.8059904-b00)
Java HotSpot(TM) 64-Bit Server VM (build 1.9.0-internal-201410100006.sspitsyn.8059904-b00, mixed mode)
Timeout signaled after 960 seconds
#section:build
----------messages:(3/112)----------
command: build DcmdMBeanPermissionsTest
reason: Named class compiled on demand
elapsed time (seconds): 4.731
result: Passed. Build successful
#section:compile
----------messages:(3/296)*----------
command: compile -XDignore.symbol.file=true C:\\local\\aurora\\sandbox\\sca\\vmsqe\\testbase\\jtreg\\nightly\\rt_baseline\\JT_JDK\\test\\com\\sun\\management\\DiagnosticCommandMBean\\DcmdMBeanPermissionsTest.java
reason: .class file out of date or does not exist
elapsed time (seconds): 4.728
...
result: Error. Program `C:\local\aurora\sandbox\sca\vmsqe\jdk\nightly\fastdebug\rt_baseline\windows-amd64\bin\java' interrupted! (timed out?)
test result: Error. Program `C:\local\aurora\sandbox\sca\vmsqe\jdk\nightly\fastdebug\rt_baseline\windows-amd64\bin\java' interrupted! (timed out?)
----------messages:(6/391)*----------
JDK under test: (C:\\local\\aurora\\sandbox\\sca\\vmsqe\\jdk\\nightly\\fastdebug\\rt_baseline\\windows-amd64)
java version "1.9.0-internal-fastdebug"
Java(TM) SE Runtime Environment (build 1.9.0-internal-fastdebug-201410100006.sspitsyn.8059904-b00)
Java HotSpot(TM) 64-Bit Server VM (build 1.9.0-internal-201410100006.sspitsyn.8059904-b00, mixed mode)
Timeout signaled after 960 seconds
#section:build
----------messages:(3/112)----------
command: build DcmdMBeanPermissionsTest
reason: Named class compiled on demand
elapsed time (seconds): 4.731
result: Passed. Build successful
#section:compile
----------messages:(3/296)*----------
command: compile -XDignore.symbol.file=true C:\\local\\aurora\\sandbox\\sca\\vmsqe\\testbase\\jtreg\\nightly\\rt_baseline\\JT_JDK\\test\\com\\sun\\management\\DiagnosticCommandMBean\\DcmdMBeanPermissionsTest.java
reason: .class file out of date or does not exist
elapsed time (seconds): 4.728
...
result: Error. Program `C:\local\aurora\sandbox\sca\vmsqe\jdk\nightly\fastdebug\rt_baseline\windows-amd64\bin\java' interrupted! (timed out?)
test result: Error. Program `C:\local\aurora\sandbox\sca\vmsqe\jdk\nightly\fastdebug\rt_baseline\windows-amd64\bin\java' interrupted! (timed out?)
- backported by
-
JDK-8083257 com/sun/management/DiagnosticCommandMBean/DcmdMBeanPermissionsTest.java timed out
-
- Resolved
-
- duplicates
-
JDK-8061199 serviceability/dcmd/CompilerQueueTest.java times out
-
- Closed
-
- relates to
-
JDK-8158374 serviceability/dcmd/compiler/CompilerQueueTest.java times out
-
- Closed
-