8061256: com/sun/management/DiagnosticCommandMBean/DcmdMBeanPermissionsTest.java timed out

Must not be at safepoint when taking CompileQueue_lock

Reviewed-by: kvn, anoll